--- a/LinkManager/WindowDialog.xaml
+++ b/LinkManager/WindowDialog.xaml
@@ -5,10 +5,11 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:LinkManager"
         mc:Ignorable="d"
-        Title="Seleziona file" Height="450" Width="800" ResizeMode="NoResize" WindowStartupLocation="CenterScreen">
+        Title="Seleziona file" Height="219.559" Width="307.112" ResizeMode="NoResize" WindowStartupLocation="CenterScreen">
     <Grid>
-        <TextBox HorizontalAlignment="Left" Height="23" Margin="10,10,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="120"/>
+        <TextBox x:Name="txtPath" HorizontalAlignment="Left" Height="23" Margin="10,10,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="120"/>
         <Button x:Name="btnBrowse" Content="..." HorizontalAlignment="Left" Margin="10,38,0,0" VerticalAlignment="Top" Width="75" Click="BtnBrowse_Click"/>
+        <Button x:Name="btnOk" Content="ok" HorizontalAlignment="Left" Margin="194,121,0,0" VerticalAlignment="Top" Width="75" Click="btnOk_Click"/>
 
     </Grid>
 </Window>
