--- a/LinkManager/WindowFormLink.xaml
+++ b/LinkManager/WindowFormLink.xaml
@@ -14,7 +14,7 @@
         <Label Content="Descrizione:" HorizontalAlignment="Left" Margin="10,103,0,0" VerticalAlignment="Top"/>
         <TextBox x:Name="txtDescrizione" Height="52" Margin="142,107,45,0" TextWrapping="Wrap" Text="TextBox&#xD;&#xA;Asdas&#xD;&#xA;Esda" VerticalAlignment="Top"/>
         <Label Content="Categoria:" HorizontalAlignment="Left" Margin="10,72,0,0" VerticalAlignment="Top"/>
-        <ComboBox x:Name="cmbCategoria" Margin="142,76,45,0" VerticalAlignment="Top"/>
+        <ComboBox x:Name="cmbCategoria" Margin="142,76,45,0" VerticalAlignment="Top" SelectionChanged="cmbCategoria_SelectionChanged"/>
         <Button x:Name="btnSalva" Content="Salva" HorizontalAlignment="Right" Margin="0,0,10,10" VerticalAlignment="Bottom" Width="75" Click="BtnSalva_Click"/>
         <Button x:Name="btnAnnulla" Content="Annulla" HorizontalAlignment="Right" Margin="0,0,90,10" VerticalAlignment="Bottom" Width="75" Click="BtnAnnulla_Click"/>
 
